knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>ISBLANK(EndDate)  ||  EndDate &gt; Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>