knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Can_Have_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Can_Have_Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Have Bonus?</label>
    <type>Checkbox</type>
</CustomField>