knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Can_Have_Leadership_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Can_Have_Leadership_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Have Leadership Incentive?</label>
    <type>Checkbox</type>
</CustomField>