knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Clinician_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Type__c</fullName>
    <label>Clinician Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Professional_Title</valueSetName>
    </valueSet>
</CustomField>