knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Code_Set_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Set_Sub_Type__c</fullName>
    <label>Code Set Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CodeSetType</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Independent Contractor</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Locum</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>