knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/EE_NP_PA_Rates__c.field-meta.xml
<CustomField>
    <fullName>EE_NP_PA_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EE NP/PA Rates?</label>
    <type>Checkbox</type>
</CustomField>