knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Shift_Type__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type__c</fullName>
    <label>Shift Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP/PA</fullName>
            </value>
            <value>
                <fullName>MD/DO</fullName>
            </value>
            <value>
                <fullName>RN/LPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>