knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Skip_Contracting__c.field-meta.xml
<CustomField>
    <fullName>Skip_Contracting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Contracting?</label>
    <type>Checkbox</type>
</CustomField>