knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/fields/Variable_Type__c.field-meta.xml
<CustomField>
    <fullName>Variable_Type__c</fullName>
    <label>Variable Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Encounter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>