knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/listViews/All_CodeSets.listView-meta.xml
<ListView>
    <fullName>All_CodeSets</fullName>
    <columns>Name</columns>
    <columns>CodeSetType</columns>
    <columns>Code</columns>
    <columns>Active__c</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Code Sets</label>
</ListView>