knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/listViews/Facility_Titles.listView-meta.xml
<ListView>
    <fullName>Facility_Titles</fullName>
    <columns>Name</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Active__c</columns>
    <columns>LastModifiedDate</columns>
    <columns>Code_Set_Sub_Type__c</columns>
    <columns>Can_Have_Leadership_Incentive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeSetType</field>
        <operation>equals</operation>
        <value>Facility Title</value>
    </filters>
    <label>Facility Titles</label>
</ListView>