knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/listViews/Rate_Configurations.listView-meta.xml
<ListView>
    <fullName>Rate_Configurations</fullName>
    <columns>Name</columns>
    <columns>CodeSetType</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Active__c</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeSetType</field>
        <operation>equals</operation>
        <value>Shift,Bonus,Stipend,Variable,Leadership Incentives</value>
    </filters>
    <label>Rate Configurations</label>
</ListView>