knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/CodeSet/listViews/Risk_Review_Questions.listView-meta.xml
<ListView>
    <fullName>Risk_Review_Questions</fullName>
    <columns>Name</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>Active__c</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeSetType</field>
        <operation>equals</operation>
        <value>Provider Risk Review</value>
    </filters>
    <label>Risk Review Questions</label>
</ListView>